# simplefora

./: .gitignore  README.md  pyproject.toml
