[tool.poetry]
name = "simplefora"
version = "0.0.0"
description = "A simple, lightweight forum written in Python."
authors = ["Andrew Zhou"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
