[tool.poetry]
name = "simplefora"
version = "0.0.0"
description = "A simple, lightweight forum written in Python."
authors = ["Andrew Zhou"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.39.0"
uvicorn = "^0.9.0"
databases = "^0.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
